--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    // AGP
+    if (project.android.hasProperty("namespace")) {
+        namespace 'carnegietechnologies.gallery_saver'
+    }
+
     compileSdkVersion 30
 
     sourceSets {
